# ldap-git-backup

./: .gitignore  ChangeLog  Makefile.am  README.md  README.mdown  build-all  configure.ac  ldap-git-backup  ldap-git-backup.in  safe-ldif.in
debian/: changelog  control  copyright  ldap-git-backup.cron.d  ldap-git-backup.examples  rules  watch
debian/upstream/: metadata
examples/: migrate-ldif
redhat/: ldap-git-backup.spec
t/: 001_help-option.t  001_help-option.t.in  010_read_ldif.t  010_read_ldif.t.in  020_entry-name.t  020_entry-name.t.in  030_git-from-scratch.t  030_git-from-scratch.t.in  031_backup-to-existing-dir.t.in  040_delete-entry.t  040_delete-entry.t.in  050_modify-entry.t  050_modify-entry.t.in  060_custom_commit.t.in  061_no_change.t.in  070_mock-slapcat.t.in  071_safe-ldif.t.in  mock-slapcat.in  test-helper.pm  test-helper.pm.in
t/testdata/: data0.ldif  data1.ldif  data_B1.ldif  data_B2.ldif  data_C2.ldif  data_C3.ldif  entry_group.ldif  entry_people.ldif  entry_people_base64.ldif  entry_people_base64_multiline.ldif  entry_people_space.ldif  entry_people_upcase.ldif
